--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 * {
   padding: 0; 
   margin: 0; 
+  color: #666; 
 }
 
-header {
+.loadingMsg{
+  font-size: 1.6rem; 
+  text-align: center; 
+  padding: 20px; 
+}
+
+.main-header {
   height: 60px; 
   background-color: rgb(104, 104, 202);
 
@@ -12,12 +19,90 @@ header {
   align-items: center;
 }
 
-header p {
-  min-width: 40px;  
-  color: rgb(228, 245, 245);
+.cart-header-info {
+  text-align:center; 
 }
 
-section.main {
-  background-color:rgb(211,212,211);
+header p {
+  color: rgb(248, 245, 245);
+}
 
+.cart {
+  background-color:rgb(241,242,241);
+  min-height: 100Vh; 
+}
+
+/* individual cart item */ 
+.image-link {
+  width: 100px; 
+}
+
+article.cart-item {
+  /* border: 1px solid red;  */
+  padding: 25px;
+  margin-left: 150px; 
+
+  display: flex; 
+  justify-content: start;
+  align-items: center;
+}
+
+.item-info {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-around;
+  /* border: 1px solid black;  */
+  min-height: 100px;
+  margin: 0 40px; 
+}
+
+.remove-btn {
+  border: transparent; 
+  background-color: transparent;
+  text-transform: uppercase;
+  color: turquoise;
+  cursor: pointer; 
+}
+.arrows {
+  /* border: 1px solid purple; */
+  text-align: center; 
+  cursor: pointer; 
+}
+.arrows .sign {
+  font-size: 1.5rem; 
+}
+
+/* footer */ 
+
+footer {
+  padding: 30px 50px; 
+
+  display: flex; 
+  justify-content: space-around;
+  align-items: center;
+}
+
+.clear-btn {
+  background: transparent;
+  border: 1px solid  rgb(104, 104, 202);
+  padding: 10px 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #333; 
+}
+
+/* header */ 
+
+.amountSpan {
+  display: inline-block; 
+  background-color:rgb(248, 245, 245);
+  color:rgb(104, 104, 202);
+  padding: 5px; 
+  font-size: 1.2rem; 
+  border-radius: 50%; 
+  text-align:center; 
+  line-height: 1; 
+  width: 20px; 
+  height: 20px; 
+  margin-left: 20px; 
 }
